--- a/style.css
+++ b/style.css
@@ -1,2 +1,25 @@
 /* Name: Anson Mah */
 /* Date: 26 April, 2024 */
+
+body {
+  /* height: 100vh; */
+  display: flex;
+  margin: 0;
+  align-items: center;
+}
+
+#toolbar_container {
+  height: 100%;
+  padding: 0.5em;
+  
+}
+
+#toolbar {
+  display: grid;
+  align-items: center;
+  gap: 0.7em;
+}
+
+canvas {
+  border: 1px solid black;
+}
